Add Shap-E as a proper submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Models/stable-dreamfusion"]
 	path = Models/stable-dreamfusion
 	url = https://github.com/ashawkey/stable-dreamfusion.git
+[submodule "Models/shap_e"]
+	path = Models/shap_e
+	url = https://github.com/openai/shap-e.git
