--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,10 @@
 [submodule "Models/stable-dreamfusion"]
 	path = Models/stable-dreamfusion
 	url = https://github.com/ashawkey/stable-dreamfusion.git
-[submodule "Models/shap_e"]
-	path = Models/shap_e
-	url = https://github.com/openai/shap-e.git
+
+[submodule "Models/shap-e"]
+	path = Models/shap-e
+	url = https://github.com/facebookresearch/shap-e.git
+[submodule "Models/CLIP"]
+	path = Models/CLIP
+	url = https://github.com/openai/CLIP.git
